gitops/manifests/cka/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cka-svc
  namespace: cka
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 8080
  selector:
    app: cka
